<resources>
    <string name="app_name">Budget</string>
    <string name="Update_Question">Update this item?</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_note" translatable="false">Enter Note</string>
    <string name="Expenseadded">Expense item added successfully</string>
    <string name="Err">Error</string>
    <string name="AmoutReq">Amount is required</string>
    <string name="NoteReq">Note is required</string>
    <string name="SelecetvalidItem">Select a valid item</string>
    <string name="databaseURL">https://budgetapp-3b284-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="successfully_update">Updated successfully</string>
    <string name="sucessfully_del">Deleted successfully</string>
    <string name="amount_allocateed_BudgetActivity">Allocated amount: $</string>
    <string name="Budget_Item">Budget Item: </string>
    <string name="on_Date">On: </string>
    <string name="add_budget">Add Budget</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_Date">Enter date</string>
    <string name="enter_Month">Enter month</string>
    <string name="enter_Year">Enter year</string>
    <string name="amount_spent_on_datte">Total amount spent on </string>
    <string name="is"> is </string>
    <string name="item_">Item: </string>
    <string name="Amount_Todays_Item_adapter">Amount: </string>
    <string name="on_Todays_Item_adapter">On: </string>
    <string name="note_Today_Items_adapter">Note: "</string>
    <string name="Transport">Transport </string>
    <string name="Food">Food </string>
    <string name="House">House </string>
    <string name="Entertainment">Entertainment </string>
    <string name="Education">Education </string>
    <string name="Charity">Charity </string>
    <string name="Personal">Personal </string>
    <string name="Travel">Travel </string>
    <string name="Health">Health </string>
    <string name="Other">Other </string>
    <string name="Amount_spent_on_Day">"Total amount spent on "</string>
    <string name="enter_Note_Delete">Enter note to delete expense</string>
    <string name="enter_mail_remainder">Please enter Email or username</string>
    <string name="enter_password_reminder">Please enter Password</string>
    <string name="login">Login</string>
    <string name="sign_up_button_text">Dont have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_login_question">Alrready have an account? Log in</string>
    <string name="note_for_delete_guide">If you want to delete expense record fill the date and note</string>
    <string name="note_for_delete_enter">Enter the note from the expense record</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="Datee_for_Search">Enter a only date if you want to check expenses</string>
    <string name="table">Table</string>
    <string name="expense_menu">Expense</string>
    <string name="budget_menu">Budget</string>
    <string name="expence_menu">Expense-Day</string>
    <string name="spending_for_today">\"Total spending for today= \"</string>
    <string name="total_budget">Total budget: </string>
    <string name="enter_date_reminder">Enter date from calendar button</string>
    <string name="table_toolbar_text">Table with Budget and Expense</string>
    <string name="spending_calendar_toolbar">Spending for any day</string>
    <string name="today_spending_toolbar">Spending for today</string>
    <string name="user_guidlines_1">You have four tabs. Your general spending and budget items are organized in 12 groups.</string>
    <string name="user_guide_2">The first tab is to add/remove/change your budget.You can add new budget items with the green Plus button.To change or remove certain Budget item you must tap on the item.</string>
    <string name="user_guie_3">Second tab is for for adding your spending\'s.To add expense you must click on the green Button. When you open the tab you will see all your spending\'s for today.</string>
    <string name="user_guide_4">In the third tab you can review your spending\'s from the past.Simply click the Green floating button with calendar image. There you have two options. 1 Only to see spending\'s for chosen day. To do this you only need to fill the date. 2 You can remove expense records by filling the date tabs and the note in the expense record.</string>
    <string name="user_guide_5">In the last tab there is table for all category\'s and their budget and expense</string>
    <string name="Home">Home</string>
    <string name="hello_again">Hello again</string>
    <string name="continue_inserting_main">We cant wait to continue helping you with your Budget</string>
    <string name="your_first_item_insert_is_waiting_you">Your first item insert is waiting you</string>
    <string name="budget_added_suc">Budget item added successfully</string>
    <string name="select_valid_item">Select a valid item</string>
    <string name="total_amount_0">Total amount: 0</string>
    <string name="error_auth">Wrong auth</string>

    <string-array name="items">
        <item>Select item</item>
        <item>Transport</item>
        <item>Food</item>
        <item>House</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Charity</item>
        <item>Personal</item>
        <item>Travel</item>
        <item>Health</item>
        <item>Other</item>
    </string-array>
</resources>