<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:title="@string/table_toolbar_text"
        app:popupTheme="@style/Theme.Budget" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="match_parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"


                android:text="@string/Budget_Item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/budget_menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/expense_menu" />
        </TableRow>
        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"


                android:text="@string/Transport" />

            <TextView
                android:id="@+id/transportationBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Column 2" />

            <TextView
                android:id="@+id/transportationExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Column 3" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"


                android:text="@string/Food" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:id="@+id/foodBudget"
                android:text="Column 2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/FoodExp"
                android:layout_marginLeft="30dp"
                android:text="Column 3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"


                android:text="@string/House" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/HouseBudget"
                android:layout_marginLeft="30dp"
                android:text="Column 2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/HouseExp"
                android:layout_marginLeft="30dp"
                android:text="Column 3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"


                android:text="@string/Entertainment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:id="@+id/EnterttainmentBudget"
                android:text="Column 2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Enterexpens"
                android:layout_marginLeft="30dp"
                android:text="Column 3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"


                android:text="@string/Personal" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/PersonalBudget"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Column 2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:id="@+id/PersonalExp"
                android:text="Column 3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"



                android:text="@string/Travel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:id="@+id/TravelBudget"
                android:text="Column 2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TravelExp"
                android:layout_marginLeft="30dp"
                android:text="Column 3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"


                android:text="@string/Health" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Column 2"
                android:id="@+id/HealthBudget"/>

            <TextView
                android:id="@+id/HealthExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Column 3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"


                android:text="@string/Charity" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/CharityBudget"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Column 2" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/CharityExp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Column 3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"


                android:text="@string/Education" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/EducationBudget"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Column 2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EducationExp"
                android:layout_marginLeft="30dp"
                android:text="Column 3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"


                android:text="@string/Other" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/OtherBudget"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Column 2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/OtherExp"
                android:layout_marginLeft="30dp"
                android:text="Column 3" />
        </TableRow>




    </TableLayout>
    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".MainActivity">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/bottomAppBar"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="10dp"
            >
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bottomNavigationView"
                android:layout_marginRight="16dp"
                app:menu="@menu/bottom_nav_menu"
                android:background="@drawable/transperant_background"

                />
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab_table"
            android:src="@drawable/ic_baseline_home_24"
            app:layout_anchor="@id/bottomAppBar"


            />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>