<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="10dp"

    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Update_Question"
        android:gravity="center"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="itemName"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/amount"
        android:textIsSelectable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:textColor="@color/black"
        android:inputType="number"/>
    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_note"
        android:textColor="@color/black"
        android:inputType="textCapSentences"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deleteBtn"
                android:text="Delete"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="2dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateBtn"
                android:text="Update"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="2dp"/>
        </RelativeLayout>


    </LinearLayout>



</LinearLayout>